# ASQMips

./: .clang-format  .gitignore  CMakeLists.txt  expected.cod  instructions.py  sample.s
ASQMips/: CMakeLists.txt  DirectiveParser.h  InstructionParser.cpp  InstructionParser.h  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h  main.cpp
MIPSMulator/: CMakeLists.txt  CPU.cpp  CPU.h  DataParser.cpp  DataParser.h  InstructionParser.cpp  InstructionParser.h  main.cpp
tests/: all_instructions.s  jump_test.s  load_test.s  simple_loop.s  store_test.s
